--- a/package.json
+++ b/package.json
@@ -9,24 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^4.41.1",
+    "jsonwebtoken": "^9.0.0",
     "next": "14.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "bcrypt": "^5.1.1",
-    "jsonwebtoken": "^9.0.0",
-    "@netlify/plugin-nextjs": "^4.41.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "autoprefixer": "^10.0.0",
     "eslint": "^8.0.0",
     "eslint-config-next": "14.0.0",
-    "typescript": "^5.0.0",
+    "postcss": "^8.0.0",
     "tailwindcss": "^3.3.0",
-    "autoprefixer": "^10.0.0",
-    "postcss": "^8.0.0"
+    "typescript": "^5.0.0"
   }
 }
