--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,6 @@
 [build]
-  command = "npm run build"
-  publish = "out"
+  command = "echo 'Static deployment - no build needed'"
+  publish = "."
 
 [build.environment]
   NODE_VERSION = "18"
-
-[[plugins]]
-  package = "@netlify/plugin-nextjs"
