--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "add-users": "ts-node scripts/add-multiple-users.ts"
   },
   "dependencies": {
     "@netlify/plugin-nextjs": "5.13.3",
+    "bcryptjs": "^2.4.3",
     "next": "^15.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
@@ -24,6 +26,7 @@
     "eslint-config-next": "^15.0.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
+    "ts-node": "^10.9.2",
     "typescript": "^5.6.0"
   },
   "main": "next.config.js",
