Fix Netlify TypeScript dependency installation issues
- Update netlify.toml to use npm ci and ensure devDependencies install
- Downgrade @types/react to stable v18.3.0 for compatibility
- Update TypeScript to stable v5.5.0
- Add NPM_FLAGS to ensure devDependencies are installed
- Add build ignore for dependency changes
- Update package-lock.json with new dependency versions

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,11 @@
 [build]
-  command = "npm run build"
+  command = "npm ci && npm run build"
+  ignore = "git diff --quiet HEAD^ HEAD -- package.json package-lock.json netlify.toml"
 
 [build.environment]
   NODE_VERSION = "20"
   NODE_ENV = "production"
+  NPM_FLAGS = "--production=false"
 
 # Next.js plugin handles the build automatically
 [[plugins]]
