--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm install && npm run build"
+  command = "npm install && npm install --save-dev typescript @types/react @types/node && npm run build"
   ignore = "git diff --quiet HEAD^ HEAD -- package.json package-lock.json netlify.toml"
 
 [build.environment]
