--- a/netlify.toml
+++ b/netlify.toml
@@ -1,20 +1,87 @@
-[build]
-  command = "npm install && npm install --save-dev typescript @types/react @types/node && npm run build"
-  ignore = "git diff --quiet HEAD^ HEAD -- package.json package-lock.json netlify.toml"
+headersOrigin = "inline"
+redirectsOrigin = "inline"
 
-[build.environment]
+[functions]
+
+  [functions."*"]
+
+[[plugins]]
+origin = "ui"
+package = "@netlify/plugin-lighthouse"
+pinned_version = "6"
+
+  [plugins.inputs]
+
+[[plugins]]
+origin = "config"
+package = "@netlify/plugin-nextjs"
+
+  [plugins.inputs]
+
+[build]
+publish = "/opt/build/repo/.next"
+publishOrigin = "ui"
+commandOrigin = "config"
+command = "npm install && npm run build"
+ignore = "git diff --quiet HEAD^ HEAD -- package.json package-lock.json netlify.toml"
+
+  [build.environment]
   NODE_VERSION = "20"
   NODE_ENV = "production"
 
-# Next.js plugin handles the build automatically
-[[plugins]]
-  package = "@netlify/plugin-nextjs"
+  [build.processing]
 
-# Security headers
+    [build.processing.css]
+
+    [build.processing.html]
+
+    [build.processing.images]
+
+    [build.processing.js]
+
+  [build.services]
+
 [[headers]]
-  for = "/*"
+for = "/*"
+
   [headers.values]
-    X-Frame-Options = "DENY"
-    X-XSS-Protection = "1; mode=block"
-    X-Content-Type-Options = "nosniff"
-    Referrer-Policy = "strict-origin-when-cross-origin"
+  X-Frame-Options = "DENY"
+  X-XSS-Protection = "1; mode=block"
+  X-Content-Type-Options = "nosniff"
+  Referrer-Policy = "strict-origin-when-cross-origin"
+
+[[headers]]
+for = "/_next/static/*"
+
+  [headers.values]
+  Cache-Control = "public, max-age=31536000, immutable"
+
+[[redirects]]
+from = "/_next/image/"
+to = "/.netlify/images?url=:url&w=:width&q=:quality"
+status = 200
+force = false
+
+  [redirects.query]
+  url = ":url"
+  w = ":width"
+  q = ":quality"
+
+  [redirects.conditions]
+
+  [redirects.headers]
+
+[[redirects]]
+from = "/_ipx/*"
+to = "/.netlify/images?url=:url&w=:width&q=:quality"
+status = 200
+force = false
+
+  [redirects.query]
+  url = ":url"
+  w = ":width"
+  q = ":quality"
+
+  [redirects.conditions]
+
+  [redirects.headers]
