--- a/netlify.toml
+++ b/netlify.toml
@@ -22,7 +22,7 @@ package = "@netlify/plugin-nextjs"
 publish = "/opt/build/repo/.next"
 publishOrigin = "ui"
 commandOrigin = "config"
-command = "npm install && npm run build"
+command = "npm install && npm install --save-dev typescript @types/react @types/node && npm run build"
 ignore = "git diff --quiet HEAD^ HEAD -- package.json package-lock.json netlify.toml"
 
   [build.environment]
