--- a/package.json
+++ b/package.json
@@ -13,24 +13,24 @@
   },
   "dependencies": {
     "@netlify/plugin-nextjs": "5.13.5",
+    "@types/node": "^20.19.19",
+    "@types/react": "^18.3.26",
     "bcryptjs": "^2.4.3",
     "next": "^15.0.0",
     "pg": "^8.11.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "typescript": "^5.9.3"
   },
   "devDependencies": {
-    "@types/node": "^20.19.19",
     "@types/pg": "^8.11.0",
-    "@types/react": "^18.3.26",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.2.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "ts-node": "^10.9.2"
   },
   "main": "next.config.js",
   "directories": {
