Fix Netlify publish directory path issue
- Changed publish path from '/opt/build/repo/.next' to '.next'
- Fixes path doubling issue: /opt/build/repo/opt/build/repo/.next
- Uses relative path which Netlify resolves correctly
- Prevents @netlify/plugin-nextjs from failing with directory not found error

--- a/netlify.toml
+++ b/netlify.toml
@@ -19,7 +19,7 @@ package = "@netlify/plugin-nextjs"
   [plugins.inputs]
 
 [build]
-publish = "/opt/build/repo/.next"
+publish = ".next"
 publishOrigin = "ui"
 commandOrigin = "config"
 command = "npm install && npm run build"
