--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "add-users": "ts-node scripts/add-multiple-users.ts",
-    "seed-users": "node scripts/add-multiple-users.js"
+    "add-users": "ts-node scripts/add-multiple-users.ts"
   },
   "dependencies": {
     "@netlify/plugin-nextjs": "5.13.5",
@@ -25,11 +24,8 @@
   "devDependencies": {
     "@types/pg": "^8.11.0",
     "@types/react-dom": "^18.3.0",
-    "autoprefixer": "^10.4.21",
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.2.0",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2"
   },
   "main": "next.config.js",
