--- a/netlify.toml
+++ b/netlify.toml
@@ -22,7 +22,7 @@ package = "@netlify/plugin-nextjs"
 publish = ".next"
 publishOrigin = "ui"
 commandOrigin = "config"
-command = "npm install && npm run build"
+command = "npm ci && npm run build"
 ignore = ""
 
   [build.environment]
