--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^20.19.19",
     "@types/react": "^18.3.26",
     "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
     "next": "^15.0.0",
     "pg": "^8.11.0",
     "react": "^18.3.1",
@@ -22,6 +23,7 @@
     "typescript": "^5.9.3"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/pg": "^8.11.0",
     "@types/react-dom": "^18.3.0",
     "eslint": "^8.57.1",
