--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/pg": "^8.11.0",
     "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.2.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
     "ts-node": "^10.9.2"
   },
   "main": "next.config.js",
