--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "add-users": "ts-node scripts/add-multiple-users.ts"
   },
   "dependencies": {
+    "@netlify/functions": "^4.2.7",
     "@netlify/plugin-nextjs": "5.13.5",
     "@types/node": "^20.19.19",
     "@types/react": "^18.3.26",
