--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@netlify/functions": "^4.2.7",
     "@netlify/plugin-nextjs": "5.13.5",
+    "@tailwindcss/cli": "^4.1.14",
     "@types/node": "^20.19.19",
     "@types/react": "^18.3.26",
     "bcryptjs": "^2.4.3",
@@ -24,14 +25,15 @@
     "typescript": "^5.9.3"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.14",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/pg": "^8.11.0",
-    "@types/react-dom": "^18.3.0",
+    "@types/react-dom": "^18.3.7",
     "autoprefixer": "^10.4.21",
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.2.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.18",
+    "tailwindcss": "^4.1.14",
     "ts-node": "^10.9.2"
   },
   "main": "next.config.js",
@@ -48,5 +50,6 @@
   "bugs": {
     "url": "https://github.com/apaulho/SurveyApp/issues"
   },
-  "homepage": "https://github.com/apaulho/SurveyApp#readme"
+  "homepage": "https://github.com/apaulho/SurveyApp#readme",
+  "type": "commonjs"
 }
