--- a/netlify.toml
+++ b/netlify.toml
@@ -23,7 +23,7 @@ publish = ".next"
 publishOrigin = "ui"
 commandOrigin = "config"
 command = "npm install && npm run build"
-ignore = ""
+ignore = "git diff --quiet HEAD^ HEAD -- package.json package-lock.json netlify.toml"
 
   [build.environment]
   NODE_VERSION = "20"
