--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,9 +11,8 @@
     "noEmit": true,
     "incremental": true,
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
     "module": "esnext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
