--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,9 @@
 [build]
-  command = "npm ci && npm run build"
-  ignore = "git diff --quiet HEAD^ HEAD -- package.json package-lock.json netlify.toml"
+  command = "npm run build"
 
 [build.environment]
   NODE_VERSION = "20"
   NODE_ENV = "production"
-  NPM_FLAGS = "--production=false"
 
 # Next.js plugin handles the build automatically
 [[plugins]]
