Revert "Prepare application for Netlify production deployment"
This reverts commit 7dbe66fd6bd8f06fb584d7a6d99dc269768ca915.

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,19 +1,9 @@
 [build]
   command = "npm run build"
+  publish = ".next"
 
 [build.environment]
   NODE_VERSION = "20"
-  NODE_ENV = "production"
 
-# Next.js plugin handles the build automatically
 [[plugins]]
   package = "@netlify/plugin-nextjs"
-
-# Security headers
-[[headers]]
-  for = "/*"
-  [headers.values]
-    X-Frame-Options = "DENY"
-    X-XSS-Protection = "1; mode=block"
-    X-Content-Type-Options = "nosniff"
-    Referrer-Policy = "strict-origin-when-cross-origin"
