Revert "Fix TypeScript module resolution error for neon-db"
This reverts commit a40154581590d484d2d29500c513bddb25d2789c.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,8 +28,7 @@
     "**/*.ts",
     "**/*.tsx",
     "next-env.d.ts",
-    ".next/types/**/*.ts",
-    "lib/**/*.ts"
+    ".next/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
